--- a/templates/submit.html
+++ b/templates/submit.html
@@ -5,14 +5,39 @@
   <meta charset="UTF-8">
   <title>AdvCAPTCHA survey</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">  
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
 <body>
-
-  <h5>Thank you</h5>
-
-
+  <div id="msform">
+    <ul id="progressbar">
+      <li class="active">Demographic</li>
+      <li class="active">練習</li>
+      <li class="active">Prototype 1</li>
+      <li class="active">Feedback 1</li>
+      <li class="active">Prototype 2</li>
+      <li class="active">Feedback 2</li>
+      <li class="active">Prototype 3</li>
+      <li class="active">Feedback 3</li>
+      <li class="active">Prototype 4</li>
+      <li class="active">Feedback 4</li>
+      <li class="active">Finish</li>
+    </ul>
+  <fieldset>
+    <h2 class="fs-title">Thank you for your participation!</h2>
+    <!-- <h3 class="fs-subtitle">We will never sell it</h3> -->
+    <!-- <label for="fname">First Name</label><input type="text" id="fname" name="fname" placeholder="First Name" required/>
+    <label for="lname">Last Name</label><input type="text" id="lname" name="lname" placeholder="Last Name" required/>
+    <label for="age">Age</label><input type="number" id="age" name="age" placeholder="Age"required/>
+    <select name="gender" required>
+      <option value="male">Select Gender</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select>
+    <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/>
+    <input type="submit" name="submit" class="submit action-button" value="Submit" onclick="before_submit();"/> -->
+  </fieldset>
+</div>
 </body>
 
 </html>
