complete specifying tasks collection

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,8 @@
           <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Costs to You:</span></u></strong></p>
           <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">There are no costs to you, other than your time, for being in this study. </span></p>
         
-        <!-- <input name="group" id="group" type="hidden" value={{group}} />
-        <input name="order" id="order" type="hidden" value={{order}} />
+        <input name="table_id" id="table_id" type="hidden" value={{table_id}} />
+        <!-- <input name="order" id="order" type="hidden" value={{order}} />
         <input name="id1" id="id1" type="hidden" value={{id1}} />
         <input name="id2" id="id2" type="hidden" value={{id2}} />
         <input name="id3" id="id3" type="hidden" value={{id3}} /> -->
@@ -78,8 +78,8 @@
         
           <h2 class="fs-title">Personal Detail</h2>
           <h3 class="fs-subtitle">We will never sell it</h3>
-          <label for="fname">First Name</label><input type="text" id="fname" name="fname" placeholder="First Name" required/>
-          <label for="lname">Last Name</label><input type="text" id="lname" name="lname" placeholder="Last Name" required/>
+          <!-- <label for="fname">First Name</label><input type="text" id="fname" name="fname" placeholder="First Name" required/>
+          <label for="lname">Last Name</label><input type="text" id="lname" name="lname" placeholder="Last Name" required/> -->
           <label for="age">Age</label><input type="number" id="age" name="age" placeholder="Age"required/>
           <select name="gender" required>
             <option value="male">Select Gender</option>
