replace instructions with chinese version

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,49 +26,17 @@
       </ul>
       
       <fieldset>
-        <h2 class="fs-title">Terms and Conditions</h2>
-        <h3 class="fs-subtitle">Please review our privacy notice and press next if you agree to it</h3>
-        <div class="termsx">
-          <p style="margin-top: 4.0pt; text-align: center; line-height: normal;"><strong><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">CONSENT DOCUMENT FOR ENROLLING PARTICIPANTS IN A RESEARCH STUDY</span></strong></p>
-          <p style="text-align: center; line-height: normal;"><strong><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></strong></p>
-          <p style="text-align: center; line-height: normal;"><strong><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Georgia Institute of Technology</span></strong></p>
-          <p style="text-align: center; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: center; line-height: 200%;"><em><span style="font-size: 12.0pt; line-height: 200%; font-family: 'Times New Roman',serif;">Exploring Cognitively Lighter Audio CAPTCHAs</span></em></p>
-          <p style="margin-top: 1.0pt; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Investigators: Valerie Fanelle, Sepideh Karimi, Aditi Shah, and Bharath Subramanian</span></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 14.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">You are being asked to be a volunteer in a research study. You are encouraged to take your time in making your decision regarding your participation in this study.</span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Purpose:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">The purpose of this study is to contrast the usability and security of current audio CAPTCHAs to a series of new audio CAPTCHA designs. </span></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Exclusion/Inclusion Criteria:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Participants must be above 18 years of age, and have legally blind vision.</span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Procedures:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">If you decide to be in this study, your part will involve one online interview session lasting no more than 45 minutes. Remember, you are free to leave at any time throughout the duration of the study. Upon initiation, you will first be presented with a link to a web-platform containing a series of audio clips and questions. As you listen to these clips and complete the survey questions, we ask for you to communicate to us your reactions and feelings towards each design. Upon completion, you will navigate to a given page that presents you with a demographic survey. Your individual demographic information, time to complete each question, and question scores will be recorded and kept separated from personally identifying information. Your data will be coded by your participant number, not your name. After completing the demographic survey, you will be debriefed by one of the researchers, explaining the procedure and importance of the study in more detail and answering any further questions you might have. </span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Risks or Discomforts:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">The risks involved are no greater than those involved in daily activities such as normal electronic device usage, similar to logging into a website.</span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Benefits:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">You are not likely to benefit in any tangible way from joining this study, apart from research enhancing the possibility of more comfortable and user friendly CAPTCHA designs.</span></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="margin-top: 4.0pt; text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Compensation to You:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">There will be a compensation for participation in this study of 10$ (USD).</span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Storing and Sharing your Information:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Your participation in this study is gratefully acknowledged.&nbsp; It is possible that your</span></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">information/data will be enormously valuable for other research purposes.&nbsp; By signing below, you consent for your de-identified information/data to be stored by the researcher and to be shared with other researchers in future studies.&nbsp; If you agree to allow such future sharing and use, your identity will be completely separated from your information/data.&nbsp; Future researchers will not have a way to identify you.&nbsp; Any future research must be approved by an ethics committee before being undertaken.</span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Confidentiality:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">The following procedures will be followed to keep your personal information confidential in this study:&nbsp; Your privacy will be protected to the extent required by law.&nbsp; To protect your privacy, your records will be kept under a participant number rather than by name.&nbsp; Your records will be kept in locked files and unless you give specific consent otherwise, only members of this research group will be allowed to look at them.&nbsp; Your name and any other fact that might point to you will not appear when results of this study are presented or published. The Georgia Institute of Technology IRB, the Office of Human Research Protections, and/or the Food and Drug Administration may look over study records during required reviews.</span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">You should be aware that the experiment is not being run from a &lsquo;secure&rsquo; https server of the kind typically used to handle credit card transactions, so there is a small possibility that responses could be viewed by unauthorized third parties such as computer hackers.&nbsp; In general, the web page software will log as header lines the IP address of the machine you use to access this page, e.g.,102.403.506.807, but otherwise no other information will be stored unless you explicitly enter it.</span></p>
-          <p style="margin-top: 1.0pt; text-align: justify; line-height: normal;"><span style="font-size: 13.0pt; font-family: 'Times New Roman',serif;">&nbsp;</span></p>
-          <p style="text-align: justify; line-height: normal;"><strong><u><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">Costs to You:</span></u></strong></p>
-          <p style="text-align: justify; line-height: normal;"><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">There are no costs to you, other than your time, for being in this study. </span></p>
-        
+        <h2 class="fs-title">歡迎您參與本研究!</h2>
+        <h3 class="fs-subtitle">若您具有正常，或是矯正後的視力以及聽力，且法定為20歲以上之成年人，<br>請您詳閱此份線上 
+          <a href="https://drive.google.com/file/d/1pfOMcxbxmiNqfzGwli-BvpY_D8GpkyiW/view?usp=sharing">「研究參與者知情說明書」</a>，它將詳述您本研究之相關資訊及您的權利。
+        </h3>
+        <div class="termsx"> 
+          <p style="margin-top: 4.0pt; text-align: center; line-height: normal;">
+            <strong><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">
+              唯有您 “同意” 本同意書您才可以開始正式參與本實驗。<br> 若您同意，請繼續完成以下之問卷內容；若您不同意本同意書，您可以關閉此線上問卷停止實驗參與。<br>
+              <b style="text-decoration:underline;font-weight:bold;">本實驗每一位受試者僅能參與一次，請勿重複填寫問卷！</b>
+          </span></strong></p>
+          
         <input name="table_id" id="table_id" type="hidden" value={{table_id}} />
         <!-- <input name="order" id="order" type="hidden" value={{order}} />
         <input name="id1" id="id1" type="hidden" value={{id1}} />
@@ -76,17 +44,47 @@
         <input name="id3" id="id3" type="hidden" value={{id3}} /> -->
   
         
-          <h2 class="fs-title">Personal Detail</h2>
-          <h3 class="fs-subtitle">We will never sell it</h3>
+          <!-- <h2 class="fs-title">Personal Detail</h2>
+          <h3 class="fs-subtitle">We will never sell it</h3> -->
           <!-- <label for="fname">First Name</label><input type="text" id="fname" name="fname" placeholder="First Name" required/>
           <label for="lname">Last Name</label><input type="text" id="lname" name="lname" placeholder="Last Name" required/> -->
-          <label for="age">Age</label><input type="number" id="age" name="age" placeholder="Age"required/>
+          <br><br><br>
+          <label for="age">(*)年齡</label>
+          <input type="number" id="age" name="age" placeholder="年齡（請輸入數字）"required/>
+          
+          <br><br><br><br>
+          <label for="gender">(*)性別</label>
           <select name="gender" required>
-            <option value="male">Select Gender</option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
+            <!-- <option value="gender">性別</option> -->
+            <option value="male">生理男性</option>
+            <option value="female">生理女性</option>
           </select>
-          <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/>
+
+          <br><br><br><br>
+          <label for="familiaritynum">(*)您對於利用聽力分辨英文語音數字 (0~9) 的信心程度為何？</label>
+          <input type="number" id="familiaritynum" name="familiaritynum" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/>
+          
+          <br><br><br><br>
+          <label for="familiaritycaptcha" style="font-size: 14px;">(*)您在這個實驗之前，對於「人機驗證」(CAPTCHA，亦即全自動公開化圖靈測驗人機辨識) <b style="font-weight: bold;">熟悉程度</b>為：(例如下圖)</label>
+          <img src="../static/images/captcha_ex.png" with="600" heigh="400" alt="captcha example, answer is xbMDNX">
+          <input type="number" id="familiaritycaptcha" name="familiaritycaptcha" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/>
+
+          <br><br><br><br>
+          <label for="familiarityaudio" style="">(*)您在這個實驗之前，對於「語音版本的」人機驗證 (Audio Captcha) <b style="font-weight: bold;">熟悉程度為</b>： (例：點擊「播放鍵」撥出語音版本之人機驗證，或參考: <a href="https://www.phpcaptcha.org/try-securimage/">https://www.phpcaptcha.org/try-securimage/</a> 中的第一個例子)
+          </label>
+          <img src="../static/images/audio_captcha_ex.png" with="600" heigh="400" alt="captcha example, answer is xbMDNX">
+          <input type="number" id="familiarityaudio" name="familiarityaudio" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/>
+
+          <br><br><br><br>
+          <label for="apparatus" style="font-size: 14px;">(*)請問您預計在待會的實驗中使用什麼語音播放方式完成 audio captcha 的測驗（請使用相同之方式完成接下來的所有測驗 </label>
+          <select name="apparatus" required>
+            <option value="earphone"> 耳機 </option>
+            <option value="speaker"> 喇叭（包含電腦或是螢幕之內建喇叭）</option>
+          </select>
+
+          <!-- <br><br><br>
+          <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/> -->
+          
           <input type="submit" name="submit" class="submit action-button" value="Submit&Next"/>
         </div>
       </fieldset>
