--- a/templates/submit.html
+++ b/templates/submit.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <form method="post" action="post_question">
   <div id="msform">
     <ul id="progressbar">
       <li class="active">Demographic</li>
@@ -24,7 +25,32 @@
       <li class="active">Finish</li>
     </ul>
   <fieldset>
-    <h2 class="fs-title">Thank you for your participation!</h2>
+    <h2 class="fs-title">測驗結束，請給予我們最後的回饋!</h2>
+    
+    <input name="table_id" id="table_id" type="hidden" value="{{table_id}}" />
+    <input name="participant_id" id="participant_id" type="hidden" value="{{participant_id}}" />
+    <input name="group" id="group" type="hidden" value="{{group}}" />
+    <input name="task_order" id="task_order" type="hidden" value="{{task_order}}" />
+    
+    <audio id="audio1" controls preload src="{{file_address1_1}}" onplay="audio_play('0'); focustext('pro0');">
+      Your browser does not support the audio element.
+    </audio>
+
+    <audio id="audio2" controls preload src="{{file_address2_1}}" onplay="audio_play('0'); focustext('pro0');">
+      Your browser does not support the audio element.
+    </audio>
+    <audio id="audio3" controls preload src="{{file_address3_1}}" onplay="audio_play('0'); focustext('pro0');">
+      Your browser does not support the audio element.
+    </audio>
+    <audio id="audio4" controls preload src="{{file_address4_1}}" onplay="audio_play('0'); focustext('pro0');">
+      Your browser does not support the audio element.
+    </audio>
+
+    <label class="statement">(*)請簡述您最喜愛該 audio captcha 的原因：</label>
+    <input type="text" name="reasontolove" />
+
+    <label class="statement">對於這個 Audio Captcha 您是否有什麼建議以及想法可以分享給我們？</label>
+    <input type="text" name="reasontohate" />
     <!-- <h3 class="fs-subtitle">We will never sell it</h3> -->
     <!-- <label for="fname">First Name</label><input type="text" id="fname" name="fname" placeholder="First Name" required/>
     <label for="lname">Last Name</label><input type="text" id="lname" name="lname" placeholder="Last Name" required/>
@@ -36,7 +62,16 @@
     </select>
     <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/>
     <input type="submit" name="submit" class="submit action-button" value="Submit" onclick="before_submit();"/> -->
+   
+    <br><br><br><br>
+    <p>非常感謝您參與本實驗，接下來之資訊為研究團隊為您申報實驗報酬所使用之資訊，請如實填答以免報酬給予失敗，此一資訊不會挪為他用並在報酬發送後刪除！</p>
+    <label for="name">名字</label><input type="text" id="name" name="name" placeholder="名字" required/>
+    <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/>
+
+    <input type="submit" name="submit" class="submit action-button" value="Complete" />
+
   </fieldset>
+</form>
 </div>
 </body>
 
