--- a/templates/submit.html
+++ b/templates/submit.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form method="post" action="post_question">
+  <form id = "finalform" method="post" action="post_question">
   <div id="msform">
     <ul id="progressbar">
       <li class="active">Demographic</li>
@@ -31,48 +31,122 @@
     <input name="participant_id" id="participant_id" type="hidden" value="{{participant_id}}" />
     <input name="group" id="group" type="hidden" value="{{group}}" />
     <input name="task_order" id="task_order" type="hidden" value="{{task_order}}" />
-    
-    <audio id="audio1" controls preload src="{{file_address1_1}}" onplay="audio_play('0'); focustext('pro0');">
-      Your browser does not support the audio element.
-    </audio>
 
-    <audio id="audio2" controls preload src="{{file_address2_1}}" onplay="audio_play('0'); focustext('pro0');">
-      Your browser does not support the audio element.
-    </audio>
-    <audio id="audio3" controls preload src="{{file_address3_1}}" onplay="audio_play('0'); focustext('pro0');">
-      Your browser does not support the audio element.
-    </audio>
-    <audio id="audio4" controls preload src="{{file_address4_1}}" onplay="audio_play('0'); focustext('pro0');">
-      Your browser does not support the audio element.
-    </audio>
+    <input name="answer1" id="answer1" type="hidden" value="" />
+    <input name="answer2" id="answer2" type="hidden" value="" />
+    <input name="answer3" id="answer3" type="hidden" value="" />
+    <input name="answer4" id="answer4" type="hidden" value="" />
+
+
+    
+    <p style = "font-weight: bold;">(*)請按照您的喜好程度，排序您剛剛測試的所有 audio captcha，最喜歡的放在最上面，依序排列下去。</p><br>
+    <ul id="input_ul">
+      <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address1_1}}" controls preload src="{{file_address1_1}}">
+        Your browser does not support the audio element.
+      </audio></li>
+      <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address2_1}}" controls preload src="{{file_address2_1}}">
+        Your browser does not support the audio element.
+      </audio></li>
+      <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address3_1}}" controls preload src="{{file_address3_1}}">
+        Your browser does not support the audio element.
+      </audio></li>
+      <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address4_1}}" controls preload src="{{file_address4_1}}"s>
+        Your browser does not support the audio element.
+      </audio></li>
+    </ul>
+
+      
+    <br><br>
+
 
     <label class="statement">(*)請簡述您最喜愛該 audio captcha 的原因：</label>
     <input type="text" name="reasontolove" />
 
     <label class="statement">對於這個 Audio Captcha 您是否有什麼建議以及想法可以分享給我們？</label>
     <input type="text" name="reasontohate" />
-    <!-- <h3 class="fs-subtitle">We will never sell it</h3> -->
-    <!-- <label for="fname">First Name</label><input type="text" id="fname" name="fname" placeholder="First Name" required/>
-    <label for="lname">Last Name</label><input type="text" id="lname" name="lname" placeholder="Last Name" required/>
-    <label for="age">Age</label><input type="number" id="age" name="age" placeholder="Age"required/>
-    <select name="gender" required>
-      <option value="male">Select Gender</option>
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-    </select>
-    <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/>
-    <input type="submit" name="submit" class="submit action-button" value="Submit" onclick="before_submit();"/> -->
-   
+
     <br><br><br><br>
     <p>非常感謝您參與本實驗，接下來之資訊為研究團隊為您申報實驗報酬所使用之資訊，請如實填答以免報酬給予失敗，此一資訊不會挪為他用並在報酬發送後刪除！</p>
     <label for="name">名字</label><input type="text" id="name" name="name" placeholder="名字" required/>
     <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/>
 
-    <input type="submit" name="submit" class="submit action-button" value="Complete" />
+    <input type="button" name="btnsubmit" class="submit action-button" value="Complete" onclick="tosubmit()"/>
 
   </fieldset>
 </form>
 </div>
+
+
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script>  
+
+sort_ul = $('#input_ul');
+itemsCount = $('#input_ul li').length;
+
+function updateIndexes(){
+    $('li input').each(function(i){
+              $(this).val(i+1);
+          });
+}
+
+updateIndexes();
+         
+sort_ul.sortable({handle:'span',
+                  stop:function(event,ui){ updateIndexes(); }
+});
+
+
+function tosubmit(){
+  var answer1 = document.getElementsByClassName("ui-state")[0].lastChild.id;
+  var answer2 = document.getElementsByClassName("ui-state")[1].lastChild.id;
+  var answer3 = document.getElementsByClassName("ui-state")[2].lastChild.id;
+  var answer4 = document.getElementsByClassName("ui-state")[3].lastChild.id;
+
+  document.getElementById('answer1').value = answer1;
+  document.getElementById('answer2').value = answer2;
+  document.getElementById('answer3').value = answer3;
+  document.getElementById('answer4').value = answer4;
+
+  console.log(answer1);
+  console.log(answer2);
+  console.log(answer3);
+  console.log(answer4);
+
+  document.getElementById("finalform").submit();
+}
+
+
+$('li input').keyup(function(event) {
+  if(event.keyCode == '13'){      
+    event.preventDefault();
+      
+    order = parseInt($(this).val());
+      
+    li = $(this).parent();
+    if(order>=1 && order <= itemsCount){      
+        
+        li.effect('drop', function(){
+            li.detach();
+                
+            if(order == itemsCount)
+                sort_ul.append(li);
+            else
+                li.insertBefore($('#input_ul li:eq('+(order-1)+')'));
+            
+            updateIndexes();
+            li.effect('slide');
+        });
+    }else{
+        li.effect('highlight');
+    }
+  }    
+});
+</script>
 </body>
+
+
 
 </html>
