add all schema after meeting, otherwise referred to time will be added

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -49,7 +49,7 @@
           <input name="task_order" id="task_order" type="hidden" value="{{task_order}}" />
 
           <!-- record captcha id and question type (ABC) and the ground truth -->
-          <input name="captcha_id0" id="captcha_id0" type="hidden" value="{{captcha_id0}}" />
+          <input name="captcha_type0" id="captcha_type0" type="hidden" value="{{captcha_type0}}" />
           <input name="task_type0" id="task_type0" type="hidden" value="{{task_type0}}" />
           <input name="ground_truth0" id="ground_truth0" type="hidden" value="{{ground_truth0}}" />
           <input name="file_address0" id="file_address0" type="hidden" value="{{practice}}" />
@@ -72,7 +72,7 @@
               <br/>
               <!-- record captcha id and question type (ABC) and the ground truth -->
               <input name="file_address1_1" id="file_address1_1" type="hidden" value="{{instance1_1}}" />
-              <input name="captcha_id1_1" id="captcha_id1_1" type="hidden" value="{{captcha_id1_1}}" />
+              <input name="captcha_type1_1" id="captcha_type1_1" type="hidden" value="{{captcha_type1_1}}" />
               <input name="task_type1_1" id="task_type1_1" type="hidden" value="{{task_type1_1}}" />
               <input name="ground_truth1_1" id="ground_truth1_1" type="hidden" value="{{ground_truth1_1}}" />
               
@@ -89,7 +89,7 @@
               </audio>
               <!-- record captcha id and question type (ABC) and the ground truth -->
               <input name="file_address1_2" id="file_address1_2" type="hidden" value="{{instance1_2}}" />
-              <input name="captcha_id1_2" id="captcha_id1_2" type="hidden" value="{{captcha_id1_2}}" />
+              <input name="captcha_type1_2" id="captcha_type1_2" type="hidden" value="{{captcha_type1_2}}" />
               <input name="task_type1_2" id="task_type1_2" type="hidden" value="{{task_type1_2}}" />
               <input name="ground_truth1_2" id="ground_truth1_2" type="hidden" value="{{ground_truth1_2}}" />
               
@@ -106,7 +106,7 @@
               </audio>
               <!-- record captcha id and question type (ABC) and the ground truth -->
               <input name="file_address1_3" id="file_address1_3" type="hidden" value="{{instance1_3}}" />
-              <input name="captcha_id1_3" id="captcha_id1_3" type="hidden" value="{{captcha_id1_3}}" />
+              <input name="captcha_type1_3" id="captcha_type1_3" type="hidden" value="{{captcha_type1_3}}" />
               <input name="task_type1_3" id="task_type1_3" type="hidden" value="{{task_type1_3}}" />
               <input name="ground_truth1_3" id="ground_truth1_3" type="hidden" value="{{ground_truth1_3}}" />
               
@@ -222,7 +222,7 @@
         </audio><br />
         <!-- record captcha id and question type (ABC) and the ground truth -->
         <input name="file_address2_1" id="file_address2_1" type="hidden" value="{{instance2_1}}" />
-        <input name="captcha_id2_1" id="captcha_id2_1" type="hidden" value="{{captcha_id2_1}}" />
+        <input name="captcha_type2_1" id="captcha_type2_1" type="hidden" value="{{captcha_type2_1}}" />
         <input name="task_type2_1" id="task_type2_1" type="hidden" value="{{task_type2_1}}" />
         <input name="ground_truth2_1" id="ground_truth2_1" type="hidden" value="{{ground_truth2_1}}" />
         
@@ -239,7 +239,7 @@
         </audio>
         <!-- record captcha id and question type (ABC) and the ground truth -->
         <input name="file_address2_2" id="file_address2_2" type="hidden" value="{{instance2_2}}" />
-        <input name="captcha_id2_2" id="captcha_id2_2" type="hidden" value="{{captcha_id2_2}}" />
+        <input name="captcha_type2_2" id="captcha_type2_2" type="hidden" value="{{captcha_type2_2}}" />
         <input name="task_type2_2" id="task_type2_2" type="hidden" value="{{task_type2_2}}" />
         <input name="ground_truth2_2" id="ground_truth2_2" type="hidden" value="{{ground_truth2_2}}" />
         
@@ -256,7 +256,7 @@
         </audio>
         <!-- record captcha id and question type (ABC) and the ground truth -->
         <input name="file_address2_3" id="file_address2_3" type="hidden" value="{{instance2_3}}" />
-        <input name="captcha_id2_3" id="captcha_id2_3" type="hidden" value="{{captcha_id2_3}}" />
+        <input name="captcha_type2_3" id="captcha_type2_3" type="hidden" value="{{captcha_type2_3}}" />
         <input name="task_type2_3" id="task_type2_3" type="hidden" value="{{task_type2_3}}" />
         <input name="ground_truth2_3" id="ground_truth2_3" type="hidden" value="{{ground_truth2_3}}" />
         
@@ -370,7 +370,7 @@
       </audio><br />
       <!-- record captcha id and question type (ABC) and the ground truth -->
       <input name="file_address3_1" id="file_address3_1" type="hidden" value="{{instance3_1}}" />
-      <input name="captcha_id3_1" id="captcha_id3_1" type="hidden" value="{{captcha_id3_1}}" />
+      <input name="captcha_type3_1" id="captcha_type3_1" type="hidden" value="{{captcha_type3_1}}" />
       <input name="task_type3_1" id="task_type3_1" type="hidden" value="{{task_type3_1}}" />
       <input name="ground_truth3_1" id="ground_truth3_1" type="hidden" value="{{ground_truth3_1}}" />
       
@@ -388,7 +388,7 @@
       </audio>
       <!-- record captcha id and question type (ABC) and the ground truth -->
       <input name="file_address3_2" id="file_address3_2" type="hidden" value="{{instance3_2}}" />
-      <input name="captcha_id3_2" id="captcha_id3_2" type="hidden" value="{{captcha_id3_2}}" />
+      <input name="captcha_type3_2" id="captcha_type3_2" type="hidden" value="{{captcha_type3_2}}" />
       <input name="task_type3_2" id="task_type3_2" type="hidden" value="{{task_type3_2}}"/>
       <input name="ground_truth3_2" id="ground_truth3_2" type="hidden" value="{{ground_truth3_2}}" />
       
@@ -405,7 +405,7 @@
       </audio>
       <!-- record captcha id and question type (ABC) and the ground truth -->
       <input name="file_address3_3" id="file_address3_3" type="hidden" value="{{instance3_3}}" />
-      <input name="captcha_id3_3" id="captcha_id3_3" type="hidden" value="{{captcha_id3_3}}" />
+      <input name="captcha_type3_3" id="captcha_type3_3" type="hidden" value="{{captcha_type3_3}}" />
       <input name="task_type3_3" id="task_type3_3" type="hidden" value="{{task_type3_3}}" />
       <input name="ground_truth3_3" id="ground_truth3_3" type="hidden" value="{{ground_truth3_3}}" />
       
@@ -518,7 +518,7 @@
       </audio><br />
       <!-- record captcha id and question type (ABC) and the ground truth -->
       <input name="file_address4_1" id="file_address4_1" type="hidden" value="{{instance4_1}}" />
-      <input name="captcha_id4_1" id="captcha_id4_1" type="hidden" value="{{captcha_id4_1}}"/>
+      <input name="captcha_type4_1" id="captcha_type4_1" type="hidden" value="{{captcha_type4_1}}"/>
       <input name="task_type4_1" id="task_type4_1" type="hidden" value="{{task_type4_1}}" />
       <input name="ground_truth4_1" id="ground_truth4_1" type="hidden" value="{{ground_truth4_1}}" />
       
@@ -535,7 +535,7 @@
       </audio>
       <!-- record captcha id and question type (ABC) and the ground truth -->
       <input name="file_address4_2" id="file_address4_2" type="hidden" value="{{instance4_2}}" />
-      <input name="captcha_id4_2" id="captcha_id4_2" type="hidden" value="{{captcha_id4_2}}" />
+      <input name="captcha_type4_2" id="captcha_type4_2" type="hidden" value="{{captcha_type4_2}}" />
       <input name="task_type4_2" id="task_type4_2" type="hidden" value="{{task_type4_2}}" />
       <input name="ground_truth4_2" id="ground_truth4_2" type="hidden" value="{{ground_truth4_2}}" />
       
@@ -552,7 +552,7 @@
       </audio>
       <!-- record captcha id and question type (ABC) and the ground truth -->
       <input name="file_address4_3" id="file_address4_3" type="hidden" value="{{instance4_3}}" />
-      <input name="captcha_id4_3" id="captcha_id4_3" type="hidden" value="{{captcha_id4_3}}" />
+      <input name="captcha_type4_3" id="captcha_type4_3" type="hidden" value="{{captcha_type4_3}}" />
       <input name="task_type4_3" id="task_type4_3" type="hidden" value="{{task_type4_3}}" />
       <input name="ground_truth4_3" id="ground_truth4_3" type="hidden" value="{{ground_truth4_3}}" />
       
