--- a/templates/index.html
+++ b/templates/index.html
@@ -81,6 +81,11 @@
             <option value="earphone"> 耳機 </option>
             <option value="speaker"> 喇叭（包含電腦或是螢幕之內建喇叭）</option>
           </select>
+          
+          <p style="margin-top: 4.0pt; text-align: center; line-height: normal;">
+            <strong><span style="font-size: 12.0pt; font-family: 'Times New Roman',serif;">
+              按下此 [Submit & Next] 按鈕後，您將開始正式之實驗參與。本實驗大約需花費 15 分鐘左右，煩請您在開始後不要中途中斷研究，否則可能會被研究系統判定為實驗中斷而中止實驗，感謝您的配合！
+          </span></strong></p>
 
           <!-- <br><br><br>
           <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email" required/> -->
