--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
           <input type="number" id="familiaritycaptcha" name="familiaritycaptcha" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/>
 
           <br><br><br><br>
-          <label for="familiarityaudio" style="">(*)您在這個實驗之前，對於「語音版本的」人機驗證 (Audio Captcha) <b style="font-weight: bold;">熟悉程度為</b>： (例：點擊「播放鍵」撥出語音版本之人機驗證，或參考: <a href="https://www.phpcaptcha.org/try-securimage/">https://www.phpcaptcha.org/try-securimage/</a> 中的第一個例子)
+          <label for="familiarityaudio">(*)您在這個實驗之前，對於「語音版本的」人機驗證 (Audio Captcha) <b style="font-weight: bold;">熟悉程度為</b>： (例：點擊「播放鍵」撥出語音版本之人機驗證，或參考: <a href="https://www.phpcaptcha.org/try-securimage/">https://www.phpcaptcha.org/try-securimage/</a> 中的第一個例子)
           </label>
           <img src="../static/images/audio_captcha_ex.png" with="600" heigh="400" alt="captcha example, answer is xbMDNX">
           <input type="number" id="familiarityaudio" name="familiarityaudio" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/>
@@ -102,10 +102,7 @@
   
 
     <script  src="js/index.js"></script>
-
-
-
-
+  
 </body>
 
 </html>
