--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -43,8 +43,9 @@
           <br/>
 
           <!-- record table id and participant's id -->
+          <input name="late" id="late" type="hidden" value="" />
           <input name="table_id" id="table_id" type="hidden" value="{{table_id}}" />
-          <input name="participant_id" id="participant_id" type="hidden" value="{{participant_id}}" />
+          <input name="spot_id" id="spot_id" type="hidden" value="{{spot_id}}" />
           <input name="group" id="group" type="hidden" value="{{group}}" />
           <input name="task_order" id="task_order" type="hidden" value="{{task_order}}" />
 
@@ -147,14 +148,6 @@
             <input type="radio" name="likert_fb1_1" value="5">
             <label>5</label>
           </li>
-          <li>
-            <input type="radio" name="likert_fb1_1" value="6">
-            <label>6</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb1_1" value="7">
-            <label>7</label>
-          </li>
           </ul>
           <label class="statement">(*)請問您剛剛測試的 Audio Captcha 容易回答嗎？（1: 非常難回答; 7: 非常好回答）</label>
           <ul class='likert'>
@@ -177,14 +170,6 @@
             <li>
               <input type="radio" name="likert_fb1_2" value="5">
               <label>5</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_2" value="6">
-              <label>6</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_2" value="7">
-              <label>7</label>
             </li>
             </ul>
 
@@ -295,14 +280,6 @@
             <input type="radio" name="likert_fb2_1" value="5">
             <label>5</label>
           </li>
-          <li>
-            <input type="radio" name="likert_fb2_1" value="6">
-            <label>6</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb2_1" value="7">
-            <label>7</label>
-          </li>
           </ul>
           <label class="statement">(*)請問您剛剛測試的 Audio Captcha 容易回答嗎？（1: 非常難回答; 7: 非常好回答）</label>
           <ul class='likert'>
@@ -325,14 +302,6 @@
             <li>
               <input type="radio" name="likert_fb2_2" value="5">
               <label>5</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb2_2" value="6">
-              <label>6</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb2_2" value="7">
-              <label>7</label>
             </li>
             </ul>
 
@@ -443,14 +412,6 @@
             <input type="radio" name="likert_fb3_1" value="5">
             <label>5</label>
           </li>
-          <li>
-            <input type="radio" name="likert_fb3_1" value="6">
-            <label>6</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb3_1" value="7">
-            <label>7</label>
-          </li>
           </ul>
           <label class="statement">(*)請問您剛剛測試的 Audio Captcha 容易回答嗎？（1: 非常難回答; 7: 非常好回答）</label>
           <ul class='likert'>
@@ -473,14 +434,6 @@
             <li>
               <input type="radio" name="likert_fb3_2" value="5">
               <label>5</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb3_2" value="6">
-              <label>6</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb3_2" value="7">
-              <label>7</label>
             </li>
             </ul>
 
@@ -590,14 +543,6 @@
             <input type="radio" name="likert_fb4_1" value="5">
             <label>5</label>
           </li>
-          <li>
-            <input type="radio" name="likert_fb4_1" value="6">
-            <label>6</label>
-          </li>
-          <li>
-            <input type="radio" name="likert_fb4_1" value="7">
-            <label>7</label>
-          </li>
           </ul>
           <label class="statement">(*)請問您剛剛測試的 Audio Captcha 容易回答嗎？（1: 非常難回答; 7: 非常好回答）</label>
           <ul class='likert'>
@@ -620,14 +565,6 @@
             <li>
               <input type="radio" name="likert_fb4_2" value="5">
               <label>5</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb4_2" value="6">
-              <label>6</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb4_2" value="7">
-              <label>7</label>
             </li>
             </ul>
 
@@ -664,6 +601,12 @@
   
 
     <script  src="js/index.js"></script>
+    <script>
+      var timer = setTimeout(function() {
+          document.getElementById('late').value = 'yes';
+          document.getElementById("myform").submit();
+        }, 3600000);
+    </script>
 
 </body>
 
